--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,18 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser=false
 
-spring.datasource.url=jdbc:h2:mem:calorie-tracker
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:calorie_tracker}
+spring.datasource.username=${DB_USER:local}
+spring.datasource.password=${DB_PASSWORD:secret}
+spring.datasource.driverClassName=org.postgresql.Driver
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=false
